--- a/app/views/cart/_order_medical.html.erb
+++ b/app/views/cart/_order_medical.html.erb
@@ -11,7 +11,13 @@
 
     <div class="my-5">
       <%= label_tag :date_planned %>
-      <%= date_field_tag :date_planned, class: "input_text_field" %>
+      
+      <%= text_field_tag :date_planned, 'Select ...',
+          data: {
+          controller: "flatpickr",
+          flatpickr_date_format: "Y-m-d",
+          flatpickr_min_date: Date.today
+          }, class: "input_text_field" %>
     </div>
 
     <div class="inline">
