--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -10,7 +10,7 @@
         <div class="error_text" id="checkbox_error">
         </div>
         <div class>
-          <%= submit_tag 'Add to Card', class: "primary_button" %>
+          <%= submit_tag t('text.Add to Card'), class: "primary_button" %>
         </div>
       </div>
       <table class="mi_table" id="desk-table">
