--- a/app/views/aviaries/_aviary_list.html.erb
+++ b/app/views/aviaries/_aviary_list.html.erb
@@ -28,8 +28,8 @@
               <% end %>
             </td>
             <td class="mi_tbody_td">
-              <%= link_to aviary_path(aviary), data: { turbo_confirm: 'Are you sure you want to delete this rover?', turbo_method: :delete}, aria: { label: "#{dom_id(aviary)}_delete" }  do %>
-              <i class="fa fa-trash-can text-red-950"></i>
+              <%= link_to aviary_path(aviary), data: { turbo_confirm: 'Are you sure?', turbo_method: :delete}, aria: { label: "#{dom_id(aviary)}_delete" }  do %>
+                <i class="fa fa-trash-can text-red-950"></i>
               <% end %>
           </tr>
         <% end %>
