--- a/app/views/cart/_cart.html.erb
+++ b/app/views/cart/_cart.html.erb
@@ -1,8 +1,8 @@
 <%= turbo_frame_tag "cart" do %>
-  <h1>Cart</h1>
+  <h1><%= t('text.cart') %></h1>
   <% if @cart && @cart&.cart_animals&.count > 0 %>
     <%= render "cart/cart_animals" %>
   <% else %>
-    <p>Your cart is empty</p>
+    <p><%= t('text.Your cart is empty') %></p>
   <% end %>
 <% end %>
