--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -58,7 +58,7 @@
                 <%= show_aviary(animal) %>
               </td>
               <td class="mi_tbody_td">
-                <%= animal.arival_date %>
+                <%= show_date(animal.arival_date) %>
               </td>
             </tr>
           <% end %>
