--- a/app/views/medical_procedures/_medical_procedure.html.erb
+++ b/app/views/medical_procedures/_medical_procedure.html.erb
@@ -31,7 +31,7 @@
         <%= t('activerecord.attributes.medical_procedure.date_complete') %>:
       </p>
       <p class="body-lg-text pl-2 inline">
-        <%= medical_procedure.date_complete %>
+        <%= l medical_procedure.date_complete %>
       </p>
     </div>
 
@@ -49,7 +49,7 @@
         <%= t('activerecord.attributes.medical_procedure.date_planned') %>:
       </p>
       <p class="body-lg-text pl-2 inline">
-        <%= medical_procedure.date_planned %>
+        <%= l medical_procedure.date_planned %>
       </p>
     </div>
 
