--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
           <%= render 'layouts/notification' %>
         </turbo-frame>
       </div>
+      <%= turbo_frame_tag "modal" %>
       <%= yield %>
     </main>
     <%= render 'layouts/footer' %>
