--- a/app/views/aviaries/_form.html.erb
+++ b/app/views/aviaries/_form.html.erb
@@ -18,12 +18,12 @@
 
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "input_text_fieldl" %>
+    <%= form.text_field :name, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :description %>
-    <%= form.textarea :description, rows: 4, class: "input_text_fieldl" %>
+    <%= form.textarea :description, rows: 4, class: "input_text_field" %>
   </div>
 
   <div class="inline">
