--- a/app/views/aviaries/sections/_sections_list.html.erb
+++ b/app/views/aviaries/sections/_sections_list.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag 'sections_list' do %>
 
-    <% sections.each do |section| %>
-      <%= render 'aviaries/sections/section', section: section %>
-    <% end %>
+  <% @sections.each do |section| %>
+    <%= render 'aviaries/sections/section', section: section %>
+  <% end %>
    
 <% end %>
