--- a/app/views/aviaries/sections/edit.html.erb
+++ b/app/views/aviaries/sections/edit.html.erb
@@ -1,8 +1,3 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing section</h1>
-
-  <%= render "form", section: @section %>
-
-  <%= link_to "Show this section", @section, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to sections", sections_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+<%= turbo_frame_tag @section do %>
+  <%= render 'form', section: @section %>
+<% end %>
