--- a/app/views/aviaries/show.html.erb
+++ b/app/views/aviaries/show.html.erb
@@ -19,9 +19,7 @@
       <% end %>
     </div>
   </div>
-  <div class="grid grid-cols-1 lg:grid-cols-2">
-    <div class="grid lg:col-span-2">
-      <%= render @aviary %>
-    </div>
+  <div class="">
+    <%= render @aviary %>
   </div>
 </div>
