--- a/app/views/aviaries/sections/_section.html.erb
+++ b/app/views/aviaries/sections/_section.html.erb
@@ -3,10 +3,13 @@
       <%= section.name %>
     </p>
   </div>
-  <%= link_to edit_aviary_section_path(@aviary, section) do %>
+  <%= link_to edit_aviary_section_path(@aviary, section), data: { turbo_frame: "modal" } do %>
     <span class="tertiary_button">Edit
       <i class="fa-solid fa-pen"></i>
     </span>
   <% end %>
-  <%= link_to 'Cancel', cancel_reason_path(@aviary, section), data: { turbo_frame: "modal" } %>
-  
+  <%= link_to aviary_section_path(@aviary, section), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } do %>
+    <span class="tertiary_button">Delete
+      <i class="fa fa-times" aria-hidden="true"></i>
+    </span>
+  <% end %>
