--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -45,14 +45,14 @@
             <div class="flex items-end">
               <div class="flex-1 w-1/2">
                 <%= f.label :arival_date %>
-                <%= f.text_field :arival_date_gteq, placeholder: t('From'), class: 'input_text_field',
+                <%= f.text_field :arival_date_gteq, placeholder: t('text.From'), class: 'input_text_field',
                   data: {
                     controller: "flatpickr",
                     flatpickr_date_format: "Y-m-d"
                   } %>
               </div>
               <div class="ml-1 flex-1 w-1/2">
-                <%= f.text_field :arival_date_lteq, placeholder: t('To'), class: 'input_text_field',
+                <%= f.text_field :arival_date_lteq, placeholder: t('text.To'), class: 'input_text_field',
                   data: {
                     controller: "flatpickr",
                     flatpickr_date_format: "Y-m-d"
