--- a/app/views/aviaries/sections/_form.html.erb
+++ b/app/views/aviaries/sections/_form.html.erb
@@ -9,6 +9,6 @@
   <div class="my-5">
     <%= form.label :name %>
     <%= form.text_field :name, class: "input_text_field" %>
-    <%= form.submit class: "primary_button mt-2" %>
+    <%= form.submit t('forms.buttons.submit'), class: "primary_button mt-2" %>
   </div>
 <% end %>
