--- a/app/views/animal_types/edit.html.erb
+++ b/app/views/animal_types/edit.html.erb
@@ -1,8 +1,6 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing animal type</h1>
+  <h1 class="font-bold text-4xl"><%= t('text.Editing') %></h1>
 
   <%= render "form", animal_type: @animal_type %>
-
-  <%= link_to "Show this animal type", @animal_type, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to animal types", animal_types_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  
 </div>
