--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -14,7 +14,7 @@
 
   <div class="my-5">
     <%= form.label :animal_type_id %>
-    <%= form.collection_select(:animal_type_id, @animal_types, :id, :name, { include_blank: "Select ...", required: true }, { class: "input_text_field" }) %>
+    <%= form.collection_select(:animal_type_id, @animal_types, :id, :name, { include_blank: "#{t('text.Select')} ...", required: true }, { class: "input_text_field" }) %>
   </div>
 
   <div class="my-5">
@@ -29,7 +29,7 @@
 
   <div class="my-5">
     <%= form.label :gender %>
-    <%= form.select(:gender, options_for_select(gender_lists, @animal.gender), { include_blank: "Select ..." }, { class: "input_text_field" } )%>
+    <%= form.select(:gender, options_for_select(gender_lists, @animal.gender), { include_blank: "#{t('text.Select')} ..." }, { class: "input_text_field" } )%>
   </div>
 
   <div class="my-5">
@@ -65,25 +65,25 @@
 
   <div class="my-5">
     <%= form.label :aviary_id %>
-    <%= form.collection_select(:aviary_id, @aviaries, :id, :name, { include_blank: "Select ..." }, { "data-action": "change->animal#getSections", "data-animal-target": "aviary_select", "class": "input_text_field" } ) %>
+    <%= form.collection_select(:aviary_id, @aviaries, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { "data-action": "change->animal#getSections", "data-animal-target": "aviary_select", "class": "input_text_field" } ) %>
   </div>
 
   <% if @animal.persisted? %>
     <% if @animal.aviary&.has_sections %>
       <div class="" data-animal-target="show_sections">
         <%= form.label :section_id %>
-        <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "Select Section ..."}, { selected: @animal.section_id.present? ? @animal.section_id : "", "data-animal-target": "section", class: "input_text_field" } %>
+        <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..."ion ..."}, { selected: @animal.section_id.present? ? @animal.section_id : "", "data-animal-target": "section", class: "input_text_field" } %>
       </div>
     <% else %>
       <div class="hidden" data-animal-target="show_sections">
         <%= form.label :section_id %>
-        <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "Select Section ..."}, { "data-animal-target": "section", class: "input_text_field" } %>
+        <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..."ion ..."}, { "data-animal-target": "section", class: "input_text_field" } %>
       </div>
     <% end %>
   <% else %>
     <div class="hidden" data-animal-target="show_sections">
       <%= form.label :section_id %>
-      <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "Select Section ..."}, { selected: @animal.section_id.present? ? @animal.section_id : "", "data-animal-target": "section", class: "input_text_field" } %>
+      <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..."ion ..."}, { selected: @animal.section_id.present? ? @animal.section_id : "", "data-animal-target": "section", class: "input_text_field" } %>
     </div>
   <% end %>
 
@@ -105,4 +105,19 @@
   <div class="inline">
     <%= form.submit t('forms.buttons.submit'), class: "primary_button" %>
   </div>
+
+  <% if form.object.persisted? %>
+    <%= link_to animal_path(@animal) do %>
+      <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
+        <i class="fa fa-times" aria-hidden="true"></i>
+      </span>
+    <% end %>
+  <% else %>
+    <%= link_to animals_path do %>
+      <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
+        <i class="fa fa-times" aria-hidden="true"></i>
+      </span>
+    <% end %>
+  <% end %>
+
 <% end %>
