--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -4,7 +4,7 @@
     <div class="lg:grid lg:justify-items-end">
       <%= link_to t('forms.buttons.edit'), edit_animal_path(@animal), class: "primary_button mb-2" %>
       <div class="mt-2">
-        <%= link_to animal_path(@animal), data: { turbo_confirm: 'Are you sure?', turbo_method: :delete} do %>
+        <%= link_to animal_path(@animal), data: { turbo_confirm: t('text.Are you sure?'), turbo_method: :delete} do %>
           <span class="tertiary_button">
             <i class="fa fa-times" aria-hidden="true"></i>
             <%= t('forms.buttons.delete') %>
@@ -26,7 +26,7 @@
   </div>
 
   <div class="container p-2 rounded-lg shadow-lg text-xl mb-20 bg-gray-50">
-    <h2 class="mb-4">Notes:</h2>
+    <h2 class="mb-4"><%= t('text.Notes') %>:</h2>
     <%= render partial: "notes/form", locals: { note: Note.new, noteable: @animal } %>
 
     <%= turbo_stream_from @animal, :notes %>
