--- a/app/views/aviaries/_form.html.erb
+++ b/app/views/aviaries/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="inline">
-    <%= form.submit class: "primary_button" %>
+    <%= form.submit t('forms.buttons.submit'), class: "primary_button" %>
   </div>
+  <%= link_to aviaries_path do %>
+    <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
+      <i class="fa fa-times" aria-hidden="true"></i>
+    </span>
+  <% end %>
 <% end %>
