--- a/app/views/aviaries/index.html.erb
+++ b/app/views/aviaries/index.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full">
-  <% content_for :title, "Aviaries" %>
+  <% content_for :title, t('text.Aviaries') %>
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Aviaries') %></h1>
