--- a/app/views/aviaries/sections/_section.html.erb
+++ b/app/views/aviaries/sections/_section.html.erb
@@ -1,15 +1,15 @@
-  <div class="py-2">
-    <p class="body-lg-text pl-2 inline">
-      <%= section.name %>
-    </p>
-  </div>
+<div class="py-2 flex items-center">
+  <p class="body-lg-text pl-2 inline">
+    <%= section.name %>
+  </p>
   <%= link_to edit_aviary_section_path(@aviary, section), data: { turbo_frame: "modal" } do %>
-    <span class="tertiary_button">Edit
+    <span class="tertiary_button"><%= t('forms.buttons.edit') %>
       <i class="fa-solid fa-pen"></i>
     </span>
   <% end %>
-  <%= link_to aviary_section_path(@aviary, section), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } do %>
-    <span class="tertiary_button">Delete
+  <%= link_to aviary_section_path(@aviary, section), data: { turbo_method: :delete, turbo_confirm: t('text.Are you sure?') } do %>
+    <span class="tertiary_button"><%= t('forms.buttons.delete') %>
       <i class="fa fa-times" aria-hidden="true"></i>
     </span>
   <% end %>
+</div>
