--- a/app/views/aviaries/sections/edit.html.erb
+++ b/app/views/aviaries/sections/edit.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "modal" do %>
   <div class="modal">
-    <h1>Edir Section</h1>
+    <h1><%= t('text.Editing') %></h1>
     <%= form_with(model: [@aviary, @section], data: { turbo_frame: "_top" }) do |form| %>
       <% if form.object.errors.any? %>
         <div class="alert alert-danger">
@@ -12,16 +12,15 @@
       <div class="my-5">
         <%= form.label :name %>
         <%= form.text_field :name, class: "input_text_field" %>
-        <%= form.submit class: "primary_button mt-2" %>
+        <div class="mt-2">
+          <%= form.submit t('forms.buttons.submit'), class: "primary_button" %>
+          <%= link_to aviary_path(@aviary), data: {controller: "modals", action: "modals#close"}  do %>
+          <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
+            <i class="fa fa-times" aria-hidden="true"></i>
+          </span>
+        </div>
+      <% end %>
       </div>
     <% end %>
-    <br>
-    <div>
-      <%= link_to aviary_path(@aviary), data: {controller: "modals", action: "modals#close"}  do %>
-        <span class="tertiary_button">Close
-          <i class="fa fa-times" aria-hidden="true"></i>
-        </span>
-      <% end %>
-    </div>
   </div>
 <% end %>
