--- a/app/views/medical_procedures/show.html.erb
+++ b/app/views/medical_procedures/show.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-auto w-full">
   <div class="mx-auto">
-    <h1>Medical Procedure</h1>
+    <h1><%= t('text.Medical Procedure') %></h1>
     <div class="grid grid-cols-2 md:grid-cols-2 gap-4">
       <div>
         <%= render @medical_procedure %>
@@ -10,7 +10,7 @@
           <%= link_to t('forms.buttons.edit'), edit_medical_procedure_path(@medical_procedure), class: "primary_button" %>
         </div>
         <div class="mt-2">
-          <%= link_to medical_procedure_path(@medical_procedure), data: { turbo_confirm: 'Are you sure?', turbo_method: :delete} do %>
+          <%= link_to medical_procedure_path(@medical_procedure), data: { turbo_confirm: t('text.Are you sure?'), turbo_method: :delete} do %>
             <span class="tertiary_button">
               <i class="fa fa-times" aria-hidden="true"></i>
               <%= t('forms.buttons.delete') %>
@@ -29,7 +29,7 @@
       </div>
     <div>
     <div class="container p-2 rounded-lg shadow-lg text-xl mb-20 bg-gray-50">
-        <h2 class="mb-4">Notes:</h2>
+        <h2 class="mb-4"><%= t('text.Notes') %>:</h2>
         <%= render partial: "notes/form", locals: { note: Note.new, noteable: @medical_procedure } %>
     
         <%= turbo_stream_from @medical_procedure, :notes %>
