--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -11,10 +11,10 @@
     </div>
   <% end %>
   <%= form.rich_text_area :body %>
-  <%= form.submit class: "primary_button mt-2" %>
+  <%= form.submit t('forms.buttons.submit'), class: "primary_button mt-2" %>
   <% if form.object.persisted? %>
     <%= link_to note do %>
-      <span class="tertiary_button">Cancel
+      <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
         <i class="fa fa-times" aria-hidden="true"></i>
       </span>
     <% end %>
