--- a/app/views/procedure_types/_form.html.erb
+++ b/app/views/procedure_types/_form.html.erb
@@ -24,4 +24,9 @@
   <div class="inline">
     <%= form.submit t('forms.buttons.submit'), class: "primary_button" %>
   </div>
+  <%= link_to procedure_types_path do %>
+    <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
+      <i class="fa fa-times" aria-hidden="true"></i>
+    </span>
+  <% end %>
 <% end %>
