--- a/app/views/procedure_types/edit.html.erb
+++ b/app/views/procedure_types/edit.html.erb
@@ -1,8 +1,6 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing procedure type</h1>
+  <h1 class="font-bold text-4xl"><%= t('text.Editing') %></h1>
 
   <%= render "form", procedure_type: @procedure_type %>
 
-  <%= link_to "Show this procedure type", @procedure_type, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to procedure types", procedure_types_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
