--- a/app/views/aviaries/sections/_form.html.erb
+++ b/app/views/aviaries/sections/_form.html.erb
@@ -1,4 +1,8 @@
-<%= form_with model: [@aviary, section] do |form| %>
+<% model = [local_assigns[:aviary], section].compact %>
+<%= form_with model: model,
+  id: dom_id_for_records(*model),
+  data: local_assigns[:data],
+  class: ["my-4"] + Array.wrap(local_assigns[:class]) do |form| %>
   <% if form.object.errors.any? %>
     <div class="alert alert-danger">
       <% form.object.errors.full_messages.each do |message| %>
@@ -10,5 +14,12 @@
     <%= form.label :name %>
     <%= form.text_field :name, class: "input_text_field" %>
     <%= form.submit class: "primary_button mt-2" %>
+    <% if form.object.persisted? %>
+    <%= link_to section do %>
+      <span class="tertiary_button">Cancel
+        <i class="fa fa-times" aria-hidden="true"></i>
+      </span>
+    <% end %>
+  <% end %>
   </div>
 <% end %>
