--- a/app/views/aviaries/sections/_section.html.erb
+++ b/app/views/aviaries/sections/_section.html.erb
@@ -1,9 +1,11 @@
+<%= turbo_stream_from section %>
+<%= turbo_frame_tag section do %>
   <div class="py-2">
     <p class="body-lg-text pl-2 inline">
       <%= section.name %>
     </p>
   </div>
-  <%= link_to edit_aviary_section_path(@aviary, section), data: { turbo_frame: "modal" } do %>
+  <%= link_to edit_aviary_section_path(@aviary, section) do %>
     <span class="tertiary_button">Edit
       <i class="fa-solid fa-pen"></i>
     </span>
@@ -13,3 +15,4 @@
       <i class="fa fa-times" aria-hidden="true"></i>
     </span>
   <% end %>
+<% end %>
