--- a/app/views/medical_procedures/index.html.erb
+++ b/app/views/medical_procedures/index.html.erb
@@ -27,7 +27,7 @@
         <div class="">
           <div class="mx-2 mb-1">
             <div>
-              <%= f.label :animal_nickname_cont %>
+              <%= f.label :animal_nickname_cont, t('text.Animal Nickname contains') %>
               <%= f.search_field :animal_nickname_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
             </div>
             <div>
