--- a/app/views/aviaries/sections/edit.html.erb
+++ b/app/views/aviaries/sections/edit.html.erb
@@ -1,3 +1,3 @@
 <%= turbo_frame_tag @section do %>
-  <%= render 'form', locals: { section: @section, aviary: @aviary } %>
+  <%= render partial: "form", locals: { section: @section, aviary: @aviary } %>
 <% end %>
