--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -11,12 +11,14 @@
     </div>
   <% end %>
   <%= form.rich_text_area :body %>
-  <%= form.submit t('forms.buttons.add'), class: "primary_button mt-2" %>
   <% if form.object.persisted? %>
+    <%= form.submit t('forms.buttons.submit'), class: "primary_button mt-2" %>
     <%= link_to note do %>
       <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
         <i class="fa fa-times" aria-hidden="true"></i>
       </span>
     <% end %>
+  <% else %>
+    <%= form.submit t('forms.buttons.add'), class: "primary_button mt-2" %>
   <% end %>
 <% end %>
