--- a/app/views/animals/_pictures.html.erb
+++ b/app/views/animals/_pictures.html.erb
@@ -4,7 +4,7 @@
       <%= t('text.Pictures') %>
     </h2>
     <p class="body-sm-text my-2">
-      <%= t('text.To upload multiple images, click Choose Files and select all images at once') %>
+      <%= t('text.To upload multiple images, click Browse and select all images at once') %>
     </p>
     <%= form_with(model: @animal, url: upload_pictures_path, method: :post, html: { class: "sm:flex sm:items-center" }) do |form| %>
       <%= form.label :pictures, "Pictures (upload multiple images)", class: "hidden" %>
