--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -102,7 +102,7 @@
 
       <div class="py-2">
         <p class="body-lg-bold-text inline">
-          <%= t('activerecord.attributes.animal.aviary') %>:
+          <%= t('activerecord.attributes.animal.aviary_id') %>:
         </p>
         <p class="body-lg-text pl-2 inline">
           <%= show_aviary(animal) %>
