--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -72,18 +72,18 @@
     <% if @animal.aviary&.has_sections %>
       <div class="" data-animal-target="show_sections">
         <%= form.label :section_id %>
-        <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..."ion ..."}, { selected: @animal.section_id.present? ? @animal.section_id : "", "data-animal-target": "section", class: "input_text_field" } %>
+        <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { selected: @animal.section_id.present? ? @animal.section_id : "", "data-animal-target": "section", class: "input_text_field" } %>
       </div>
     <% else %>
       <div class="hidden" data-animal-target="show_sections">
         <%= form.label :section_id %>
-        <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..."ion ..."}, { "data-animal-target": "section", class: "input_text_field" } %>
+        <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { "data-animal-target": "section", class: "input_text_field" } %>
       </div>
     <% end %>
   <% else %>
     <div class="hidden" data-animal-target="show_sections">
       <%= form.label :section_id %>
-      <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..."ion ..."}, { selected: @animal.section_id.present? ? @animal.section_id : "", "data-animal-target": "section", class: "input_text_field" } %>
+      <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { selected: @animal.section_id.present? ? @animal.section_id : "", "data-animal-target": "section", class: "input_text_field" } %>
     </div>
   <% end %>
 
