--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -21,12 +21,12 @@
               <input type="checkbox" aria-labelledby="select_all" class="check_box ml-2" data-checkboxselectall-target="checkbox_all" data-action="change->checkboxselectall#toggleCheckbox">
             </td>
             <th class="header_th"><%= t('activerecord.attributes.animal.id') %></th>
-            <th class="header_th"><%= t('activerecord.attributes.animal.animal_type_id') %></th>
-            <th class="header_th"><%= t('activerecord.attributes.animal.nickname') %></th>
-            <th class="header_th"><%= t('activerecord.attributes.animal.surname') %></th>
-            <th class="header_th"><%= t('activerecord.attributes.animal.gender') %></th>
+            <th class="header_th"><%= sort_link(@q, :animal_type_id, t('activerecord.attributes.animal.animal_type_id')) %></th>
+            <th class="header_th"><%= sort_link(@q, :nickname, t('activerecord.attributes.animal.nickname')) %></th>
+            <th class="header_th"><%= sort_link(@q, :surname, t('activerecord.attributes.animal.surname')) %></th>
+            <th class="header_th"><%= sort_link(@q, :gender, t('activerecord.attributes.animal.gender')) %></th>
             <th class="header_th"><%= t('label.Age') %></th>
-            <th class="header_th"><%= sort_link(@q, :aviary_id, t('activerecord.attributes.animal.aviary')) %></th>
+            <th class="header_th"><%= sort_link(@q, :aviary_id, t('activerecord.attributes.animal.aviary_id')) %></th>
             <th class="header_th"><%= sort_link(@q, :arival_date, t('activerecord.attributes.animal.arival_date')) %></th>
           </tr>
         </thead>
