--- a/app/views/cart/_cart_animals.html.erb
+++ b/app/views/cart/_cart_animals.html.erb
@@ -5,7 +5,7 @@
           <th class="header_th"><%= t('activerecord.attributes.animal.id') %></th>
           <th class="header_th"><%= t('activerecord.attributes.animal.animal_type_id') %></th>
           <th class="header_th"><%= t('activerecord.attributes.animal.nickname') %></th>
-          <th class="header_th"><%= t('activerecord.attributes.animal.aviary') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.animal.aviary_id') %></th>
           <th class="header_th"><%= t('forms.buttons.delete') %></th>
         </tr>
       </thead>
