--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -102,12 +102,33 @@
       </div>
     <% end %>
   </div>
+  <div class="flex justify-between items-center" data-controller="autosubmit">
+    <div> </div>
+    <%= form_with url: animals_path, method: :get, class: "", data: { autosubmit_target: "form", turbo_frame: "turbo-animals" } do |form| %>
+      <label for="switch_view" class="fancy_label">View</label>
+      <%= select_tag "switch_view", options_for_select([["Table", "table"], ["Pictures", "pictures"]], selected: params[:switch_view]), class: "input_text_field",
+        :"data-action" => "change->autosubmit#submit" %>
+      <% if @view == 'pictures' %>
+        <div class="display inline">
+      <% else %>
+        <div class="hidden inline">
+      <% end %>
+        <label for="q_s" class="fancy_label">Sort</label>
+        <%= select_tag "q[s]", options_for_select([["Enclosure", "aviary_id"], ["Nickname", "nickname"]], selected: @sort_by), include_blank: "Sort", class: "input_text_field",
+          :"data-action" => "change->autosubmit#submit" %>
+      </div>
+    <% end %>
+  </div>
   <%= turbo_frame_tag "turbo-animals" do %>
     <div class="mb-10 min-w-full" id="animals_listing">
       <div class="my-2" >
         <%= page_entries_info @animals %>
       </div>
-      <%= render 'animal_list' %>
+      <% if @view == 'table' %>
+        <%= render 'animal_list' %>
+      <% else %>
+        <%= render 'picture_list' %>
+      <% end %>
       <div class="my-2 flex justify-center" >
         <%= paginate @animals %>
       </div>
