адд енцлосурес то царт

--- a/app/views/cart/_cart_animals.html.erb
+++ b/app/views/cart/_cart_animals.html.erb
@@ -6,7 +6,7 @@
           <th class="header_th"><%= t('activerecord.attributes.animal.animal_type_id') %></th>
           <th class="header_th"><%= t('activerecord.attributes.animal.nickname') %></th>
           <th class="header_th"><%= t('activerecord.attributes.animal.aviary_id') %></th>
-          <th class="header_th"><%= t('forms.buttons.delete') %></th>
+          <th class="header_th"><%= t('forms.buttons.delete from cart') %></th>
         </tr>
       </thead>
       <tbody>
