--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <div class="min-h-screen flex flex-col justify-center items-center bg-gradient-to-r from-indigo-100 via-purple-100 to-pink-100 px-4">
   <div class="bg-white p-8 sm:p-12 rounded-lg shadow-xl w-full max-w-screen-lg mx-auto text-center">
-    <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 mb-6 sm:mb-8">Граждане Dogs Ambulance</h1>
+    <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 mb-6 sm:mb-8">Dogs Ambulance</h1>
     <p class="text-base sm:text-lg text-gray-600 mb-6 sm:mb-8">
-    Питомник Лены Березиной
+    <%= t("text.Lena Beresina's shelter") %>
     </p>
 
   </div>
