--- a/app/views/medical_procedures/_form.html.erb
+++ b/app/views/medical_procedures/_form.html.erb
@@ -37,8 +37,8 @@
   </div>
 
   <div class="my-5">
-    <%= form.label :date_complete %>
-    <%= form.date_field :date_complete, class: "input_text_field" %>
+    <%= form.label :date_completed %>
+    <%= form.date_field :date_completed, class: "input_text_field" %>
   </div>
 
   <div class="inline">
