--- a/app/views/medical_procedures/_medical_procedure.html.erb
+++ b/app/views/medical_procedures/_medical_procedure.html.erb
@@ -28,10 +28,10 @@
 
     <div class="py-2">
       <p class="body-lg-bold-text inline">
-        <%= t('activerecord.attributes.medical_procedure.date_complete') %>:
+        <%= t('activerecord.attributes.medical_procedure.date_completed') %>:
       </p>
       <p class="body-lg-text pl-2 inline">
-        <%= show_date(medical_procedure.date_complete) %>
+        <%= show_date(medical_procedure.date_completed) %>
       </p>
     </div>
 
