--- a/app/views/medical_procedures/index.html.erb
+++ b/app/views/medical_procedures/index.html.erb
@@ -51,8 +51,8 @@
             </div>
             <div class="flex items-end">
               <div class="flex-1 w-1/2">
-                <%= f.label :date_complete %>
-                <%= f.text_field :date_complete_eq, placeholder: t('text.Date'), class: 'input_text_field',
+                <%= f.label :date_completed %>
+                <%= f.text_field :date_completed_eq, placeholder: t('text.Date'), class: 'input_text_field',
                   data: {
                     controller: "flatpickr",
                     flatpickr_date_format: "Y-m-d"
